# MriUi

./: .gitignore  CMakeLists.txt  ExamPage.qml  HistoryPage.qml  IconButton.qml  SequenceTable.qml  main.cpp  main.qml  qml.qrc  readme.md  resources.qrc
include/: examconfig.h  fakedevice.h  mriuiconfig.h  patient.h  patientmanager.h  scanner.h  studyconfig.h
resources/: defaultStudies.json  id.json  seqCodeMap.json
src/: examconfig.cpp  fakedevice.cpp  main.cpp  mriuiconfig.cpp  patient.cpp  patientmanager.cpp  scanner.cpp  studyconfig.cpp
ui/: ExamDashboard.qml  HistoryPage.qml  IconButton.qml  Main.qml  SequenceList.qml  SequenceListView.qml  SequenceSetting.qml  qmldir
ui/components/: DatePicker.qml  DragableListItem.qml  DragableListView.qml  IconButton.qml  MsgBox.qml
ui/exam/: ExamDashboard.qml
ui/history/: HistoryPage.qml
ui/patient/: PatientSetting.qml  PatientWindow.qml
ui/study/: StudiesList.qml  StudiesListView.qml  StudyDashboard.qml  StudyItem.qml
ui/tuning/: CentralFrequency.qml  RfPower.qml  Shiming.qml  TuningWindow.qml
ui/views/: SequenceListView.qml
